Release notes
-------------

Date          Version   Comment
2021/04/14    1.7.5     Revert adding type to data_to_form function argument as it generates a warning on 3.10
2021/04/14    1.7.4     Revert adding type to add_form_fragment function argument as it breaks on 3.10
2021/04/12    1.7.3     Fix code warnings, behat errors in 3.8+.
2021/01/12    1.7.2     Fix error in backup facility introduced in 1.7.0.
2020/11/20    1.7.1     Add support for standard instruction flag in XML import/export.
2020/11/17    1.7.0     Add support for displaying standard instructions.
2020/11/16    1.6.7     Fix 3.9 answer vertical alignment issue by copying CSS from standard multichoice question.
2020/07/10    1.6.6     Fix 3.9 presentation issue (solution provided by James Garrett).
2019/05/08    1.6.5     Add support for combinable question type, improve error recovery and testing (provided by J-M Vedrine)
2019/04/05    1.6.4     Add support for Spanish (International) (provided by Carlos Pasqualini)
2019/01/29    1.6.3     Add support for mobile app 3.6 (provided by Zvonko Martinovic)
2019/01/08    1.6.2     Fix handling of default numbering style
2018/02/05    1.6.1     Fix presentation of answers in Boost theme, fix some PHPDocs warnings
2018/01/31    1.6       Support Moodle mobile app