@@ -24,7 +24,9 @@
 
 $string['correctanswer'] = 'Correcto';
 $string['deletedchoice'] = 'Esta opción se eliminó después de que se inició el intento.';
+$string['distractor'] = 'Incorrecto';
 $string['errnocorrect'] = 'Al menos una de las opciones debe ser correcta para que sea posible obtener una calificación completa para esta pregunta.';
+$string['included'] = 'Correcto';
 $string['pluginname'] = 'Opción múltiple de todo o nada';
 $string['pluginname_help'] = 'Después de una introducción opcional, el encuestado puede elegir una o más respuestas. Si las respuestas elegidas corresponden exactamente a las opciones "correctas" definidas en la pregunta, el encuestado obtiene el 100%. Si elige alguna opción "incorrecta" o no selecciona todas las opciones "correctas", la calificación es 0%. Al menos una opción debe estar marcada como correcta para cada pregunta. Agregue una opción "Ninguna de las anteriores" para manejar una pregunta donde ninguna de las otras opciones sea correcta. A diferencia de la pregunta de opción múltiple con calificaciones fraccionarias, las únicas calificaciones posibles para una pregunta de todo o nada son 100% o 0% ';
 $string['pluginname_link'] = 'question/type/multichoiceset';
@@ -33,4 +35,3 @@ $string['pluginnameediting'] = 'Editando una pregunta de opción múltiple de to
 $string['pluginnamesummary'] = 'Permite la selección de respuestas múltiples de una lista predefinida y usa la calificación de todo o nada (100% o 0%).';
 $string['privacy:metadata'] = 'The All-or-Nothing Multiple Choice plugin does not store any personal data.';
 $string['showeachanswerfeedback'] = 'Mostrar los comentarios de las respuestas seleccionadas.';
-$string['showstandardinstruction_help'] = 'Si es que se muestran o no las instrucciones &quot;Seleccione una o más:&quot; antes de las respuestas de opción múltiple de todo o nada.';
