@@ -85,14 +85,13 @@ class qtype_multichoiceset extends question_type {
         $options->incorrectfeedback = get_string('incorrectfeedbackdefault', 'question');
         $options->incorrectfeedbackformat = FORMAT_HTML;
 
-        $config = get_config('qtype_multichoiceset');
+        $config = get_config('qtype_multichoice');
         $options->single = $config->answerhowmany;
         if (isset($question->layout)) {
             $options->layout = $question->layout;
         }
         $options->answernumbering = $config->answernumbering;
         $options->shuffleanswers = $config->shuffleanswers;
-        $options->showstandardinstruction = 0;
         $options->shownumcorrect = 1;
 
         return $options;
@@ -173,7 +172,6 @@ class qtype_multichoiceset extends question_type {
             $options->questionid = $question->id;
             $options->correctfeedback = '';
             $options->incorrectfeedback = '';
-            $options->showstandardinstruction = 0;
             $options->id = $DB->insert_record('qtype_multichoiceset_options', $options);
         }
 
@@ -182,7 +180,6 @@ class qtype_multichoiceset extends question_type {
         }
         $options->answernumbering = $question->answernumbering;
         $options->shuffleanswers = $question->shuffleanswers;
-        $options->showstandardinstruction = !empty($question->showstandardinstruction);
         $options->correctfeedback = $this->import_or_save_files($question->correctfeedback,
                 $context, 'question', 'correctfeedback', $question->id);
         $options->correctfeedbackformat = $question->correctfeedback['format'];
@@ -314,7 +311,6 @@ class qtype_multichoiceset extends question_type {
         parent::initialise_question_instance($question, $questiondata);
         $question->shuffleanswers = $questiondata->options->shuffleanswers;
         $question->answernumbering = $questiondata->options->answernumbering;
-        $question->showstandardinstruction = $questiondata->options->showstandardinstruction;
         if (!empty($questiondata->options->layout)) {
             $question->layout = $questiondata->options->layout;
         } else {
@@ -487,7 +483,6 @@ class qtype_multichoiceset extends question_type {
             $expout .= "    <shownumcorrect/>\n";
         }
         $expout .= "    <answernumbering>{$question->options->answernumbering}</answernumbering>\n";
-        $expout .= "    <showstandardinstruction>{$question->options->showstandardinstruction}</showstandardinstruction>\n";
         $expout .= $format->write_answers($question->options->answers);
 
         return $expout;
@@ -516,9 +511,6 @@ class qtype_multichoiceset extends question_type {
 
         $question->answernumbering = $format->getpath($data,
                 array('#', 'answernumbering', 0, '#'), 'abc');
-
-        $question->showstandardinstruction = $format->trans_single(
-                 $format->getpath($data, array('#', 'showstandardinstruction', 0, '#'), 1));
 
         $question->correctfeedback = array();
         $question->correctfeedback['text'] = $format->getpath($data, array('#', 'correctfeedback', 0, '#', 'text', 0, '#'),
